cleanup, use webclient instead of resttemplate